# Greenhouse

./: .cproject  README.md  main.c  partitions.csv  sdkconfig
invernaderoSBC/: CMakeLists.txt
invernaderoSBC/components/bme68x/: CMakeLists.txt
invernaderoSBC/components/ssd1306/: CMakeLists.txt
invernaderoSBC/main/: CMakeLists.txt  main.c
v0/: .project  main.c  sdkconfig.old
v0/components/ssd1306/: font8x8_basic.h  ssd1306.h  ssd1306_i2c.c
v0/main/: main - Copy.c
